@@ -139,3 +139,9 @@
 2011-03-07  Mike Blumenkrantz
 
         * Fix segv when trying to set gl viewpoint with NULL ctx
+
+2011-03-08  Carsten Haitzler (The Rasterman)
+
+	* Fix problem with different x vsync api between SGI and EXT flavor
+        as they have the same base name, but different prototypes.
+
